# panini_webscrapper

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
.code_quality/: .pylintrc  bandit.yaml  mypy.ini
commands/: clean.sh
notebooks/: Exploration.ipynb  Untitled.ipynb
src/: scrapy.cfg
src/panini_webscrapper/: items.py  middlewares.py  pipelines.py  settings.py
src/panini_webscrapper/spiders/: panini.py
